# gpt4all

./: .codespellrc  .gitmodules  README.md
.circleci/: continue_config.yml
docs/gpt4all_desktop/: settings.md
gpt4all-backend/: CMakeLists.txt
gpt4all-backend-test/: CMakeLists.txt
gpt4all-backend-test/src/: CMakeLists.txt  config.h.in  main.cpp  pretty.h
gpt4all-backend/include/gpt4all-backend/: formatters.h  generation-params.h  main.h  ollama-client.h  ollama-model.h  ollama-responses.h  ollama-types.h  ollama_client.h  rest.h
gpt4all-backend/src/: CMakeLists.txt  formatters.cppm  json-helpers.cpp  json-helpers.h  json_helpers.cpp  json_helpers.h  main.cpp  main.cppm  ollama-client.cpp  ollama-types.cpp  ollama_client.cpp  qt-json-stream.cpp  qt-json-stream.h  rest.cpp
gpt4all-chat/: CHANGELOG.md  CMakeLists.txt
gpt4all-chat/qml/: AddCustomProviderView.qml  AddModelView.qml  AddRemoteModelView.qml  ApplicationSettings.qml  CustomProviderCard.qml  ModelSettings.qml  RemoteModelCard.qml
gpt4all-chat/src/: chat.cpp  chat.h  chatapi.cpp  chatlistmodel.cpp  chatllm.cpp  chatllm.h  chatmodel.h  creatable.h  database.cpp  embllm.cpp  jinja_helpers.cpp  json-helpers.cpp  json-helpers.h  llmodel_chat.cpp  llmodel_chat.h  llmodel_description.cpp  llmodel_description.h  llmodel_ollama.cpp  llmodel_ollama.h  llmodel_openai.cpp  llmodel_openai.h  llmodel_provider.cpp  llmodel_provider.h  llmodel_provider.inl  llmodel_provider_builtins.cpp  main.cpp  main.h  modellist.cpp  modellist.h  mwhttpserver.cpp  mwhttpserver.h  mwhttpserver.inl  mysettings.cpp  mysettings.h  network.cpp  qmlfunctions.cpp  qmlfunctions.h  qmlsharedptr.cpp  qmlsharedptr.h  server.cpp  (+8 more)
gpt4all-chat/src/llmodel/: chat.h  openai.cpp  openai.h  provider.cpp  provider.h
gpt4all-chat/translations/: gpt4all_en_US.ts  gpt4all_es_MX.ts  gpt4all_it_IT.ts  gpt4all_pt_BR.ts  gpt4all_ro_RO.ts  gpt4all_zh_CN.ts  gpt4all_zh_TW.ts
